[package]
name = "compiler-dependency-builder"
description = "Main compiler dependency builder for Thrust Compiler."
license = "GPL-3.0"
version = "1.0.0"
edition = "2024"

authors = [
    "Stevens Benavides <foss.stevens.benavides@gmail.com>"
]

readme = "README.md"
rust-version = "1.85.0"

[dependencies]

isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }

tar = "0.4.44"
xz = "0.1.0"

ahash = "0.8.12"
lazy_static = "1.5.0"
serde_json =  "1.0.140"